--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
         <header class="site-header">
 
             <div class="site-branding">
-                <img src="src\assets\images\logo.svg" alt="site logo">
+                <img src="src/assets/images/logo.svg" alt="site logo">
             </div>
             <!-- .site-branding -->
 
             <div class="site-navigation">
                 <button type="button" onclick="toggleNav()">
-                    <a href="#">
-                        <img   id="siteNavButton"   src="src\assets\images\icon-hamburger.svg" alt="burger menu icon">
-                    </a>
+                    <img   id="siteNavButton"   src="src/assets/images/icon-hamburger.svg" alt="burger menu icon">  
                 </button>
                 <nav>
                     <ul>
@@ -257,7 +255,7 @@
 
 
     <div class="attribution ">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a>. Coded by <a href="https://github.com/arnaudouttier ">Arnaud Outtier</a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="blank ">Frontend Mentor</a>. Coded by <a href="https://github.com/arnaudouttier ">Arnaud Outtier</a>.
     </div>
 
     <script src="src/js/main.js"></script>
