--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
                 <div class="intro-img ">
                     <picture>
-                        <source media="(min-width:375px) " srcset="src\assets\images\image-intro-desktop.jpg ">
-                        <img src="src\assets\images\image-intro-mobile.jpg " alt="image intro ">
+                        <source media="(min-width:375px) " srcset="src/assets/images/image-intro-desktop.jpg ">
+                        <img src="src/assets/images/image-intro-mobile.jpg " alt="image intro ">
                     </picture>
                 </div>
 
@@ -140,7 +140,7 @@
                 <div class="site-info ">
 
                     <div class="site-branding ">
-                        <img src="src\assets\images\logo.svg " alt="site logo ">
+                        <img src="src/assets/images/logo.svg " alt="site logo ">
                     </div>
                     <!-- .site-branding -->
 
