--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
         <div id="siteNavMobile" class="site-nav-mobile">
             <ul>
                 <li>
-                    <a href="#">How we work</a>
+                    <a href="">How we work</a>
                 </li>
                 <li>
-                    <a href="#">Blog</a>
+                    <a href="">Blog</a>
                 </li>
                 <li>
-                    <a href="#">Account</a>
+                    <a href="">Account</a>
                 </li>
                 <li class="btn btn-white">
-                    <a href="#">View plans</a>
+                    <a href="">View plans</a>
                 </li>
             </ul>
         </div>
